# Pathfinder2-Telegram

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  build_certificates.sh  commands.json  install.sh  inventory_bot.env  inventory_bot.service  keyboards.json  meson.build  messages.json  pf2_inv.db
localization_data/: commands_en.json  commands_it.json  messages_en.json  messages_it.json
src/: main.cpp  meson.build
src/bot/: bot.cpp  bot.hpp  callback_handler.cpp  callback_handler.hpp  https_server.cpp  https_server.hpp  keyboards.cpp  keyboards.hpp  local_data.cpp  local_data.hpp  master.cpp  master.hpp  meson.build  message_handler.cpp  message_handler.hpp
src/bot/callback_commands/: add.cpp  callback_commands.cpp  callback_commands.hpp  remove.cpp
src/bot/commands/: add.cpp  commands.cpp  commands.hpp  delete_item_master.cpp  edit_item_master.cpp  get_money.cpp  give.cpp  give_master.cpp  list.cpp  money_transaction.cpp  register_item_master.cpp  remove.cpp  reset.cpp  send_broadcast_master.cpp  set_capacity.cpp  set_coin_bulk_master.cpp  start.cpp
src/bot/context_commands/: add.cpp  add_custom_item.cpp  add_item.cpp  broadcast_message_content_req_master.cpp  context_commands.cpp  context_commands.hpp  delete_item_master.cpp  edit_item_master.cpp  edit_selection.cpp  edit_value_request.cpp  give_item.cpp  give_request.cpp  give_request_master.cpp  list.cpp  list_detail.cpp  money_dest_request.cpp  money_transaction.cpp  register_item_master.cpp  remove.cpp  set_capacity.cpp  set_coin_bulk_master.cpp
src/character/: character.cpp  character.hpp  character_cache.cpp  character_cache.hpp  meson.build
src/common/: cache.hpp  meson.build  string_utils.hpp
src/database/: database.cpp  database.hpp  meson.build  settings.cpp  settings.hpp
src/dice_expression_parser/: meson.build  node.cpp  node.hpp  node_factory.cpp  node_factory.hpp
src/dice_expression_parser/operators/: dice_node.cpp  dice_node.hpp  leaf_node.cpp  leaf_node.hpp  substraction_node.cpp  substraction_node.hpp  sum_node.cpp  sum_node.hpp
src/inventory/: custom_item.cpp  custom_item.hpp  inventory.cpp  inventory.hpp  inventory_entry.cpp  inventory_entry.hpp  item.cpp  item.hpp  item_database.cpp  item_database.hpp  item_manager.cpp  item_manager.hpp  meson.build
test/: inventory.cpp  meson.build
